parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE
Rule 2     declarations -> declaration declarations
Rule 3     declarations -> declaration
Rule 4     declaration -> INT identifier_list SEMI
Rule 5     identifier_list -> IDENTIFIER
Rule 6     identifier_list -> IDENTIFIER COMMA identifier_list
Rule 7     statements -> statement
Rule 8     statements -> statement statements
Rule 9     statement -> READ IDENTIFIER SEMI
Rule 10    statement -> IDENTIFIER ASSIGN expression SEMI
Rule 11    statement -> PRINTF LPAREN STRING RPAREN
Rule 12    expression -> IDENTIFIER PLUS IDENTIFIER
Rule 13    expression -> NUMBER
Rule 14    expression -> IDENTIFIER

Terminals, with rules where they appear

ASSIGN               : 10
COMMA                : 6
END                  : 1
IDENTIFIER           : 1 5 6 9 10 12 12 14
INT                  : 4
LBRACE               : 1
LPAREN               : 1 11
MINUS                : 
NUMBER               : 13
PLUS                 : 12
PRINTF               : 11
PROGRAMA             : 1
RBRACE               : 1
READ                 : 9
RPAREN               : 1 11
SEMI                 : 1 4 9 10
STRING               : 11
error                : 

Nonterminals, with rules where they appear

declaration          : 2 3
declarations         : 1 2
expression           : 10
identifier_list      : 4 6
program              : 0
statement            : 7 8
statements           : 1 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAMA IDENTIFIER . LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE

    LPAREN          shift and go to state 4


state 4

    (1) program -> PROGRAMA IDENTIFIER LPAREN . RPAREN LBRACE declarations statements END SEMI RBRACE

    RPAREN          shift and go to state 5


state 5

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN . LBRACE declarations statements END SEMI RBRACE

    LBRACE          shift and go to state 6


state 6

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE . declarations statements END SEMI RBRACE
    (2) declarations -> . declaration declarations
    (3) declarations -> . declaration
    (4) declaration -> . INT identifier_list SEMI

    INT             shift and go to state 9

    declarations                   shift and go to state 7
    declaration                    shift and go to state 8

state 7

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations . statements END SEMI RBRACE
    (7) statements -> . statement
    (8) statements -> . statement statements
    (9) statement -> . READ IDENTIFIER SEMI
    (10) statement -> . IDENTIFIER ASSIGN expression SEMI
    (11) statement -> . PRINTF LPAREN STRING RPAREN

    READ            shift and go to state 13
    IDENTIFIER      shift and go to state 10
    PRINTF          shift and go to state 14

    statements                     shift and go to state 11
    statement                      shift and go to state 12

state 8

    (2) declarations -> declaration . declarations
    (3) declarations -> declaration .
    (2) declarations -> . declaration declarations
    (3) declarations -> . declaration
    (4) declaration -> . INT identifier_list SEMI

    READ            reduce using rule 3 (declarations -> declaration .)
    IDENTIFIER      reduce using rule 3 (declarations -> declaration .)
    PRINTF          reduce using rule 3 (declarations -> declaration .)
    INT             shift and go to state 9

    declaration                    shift and go to state 8
    declarations                   shift and go to state 15

state 9

    (4) declaration -> INT . identifier_list SEMI
    (5) identifier_list -> . IDENTIFIER
    (6) identifier_list -> . IDENTIFIER COMMA identifier_list

    IDENTIFIER      shift and go to state 17

    identifier_list                shift and go to state 16

state 10

    (10) statement -> IDENTIFIER . ASSIGN expression SEMI

    ASSIGN          shift and go to state 18


state 11

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements . END SEMI RBRACE

    END             shift and go to state 19


state 12

    (7) statements -> statement .
    (8) statements -> statement . statements
    (7) statements -> . statement
    (8) statements -> . statement statements
    (9) statement -> . READ IDENTIFIER SEMI
    (10) statement -> . IDENTIFIER ASSIGN expression SEMI
    (11) statement -> . PRINTF LPAREN STRING RPAREN

    END             reduce using rule 7 (statements -> statement .)
    READ            shift and go to state 13
    IDENTIFIER      shift and go to state 10
    PRINTF          shift and go to state 14

    statement                      shift and go to state 12
    statements                     shift and go to state 20

state 13

    (9) statement -> READ . IDENTIFIER SEMI

    IDENTIFIER      shift and go to state 21


state 14

    (11) statement -> PRINTF . LPAREN STRING RPAREN

    LPAREN          shift and go to state 22


state 15

    (2) declarations -> declaration declarations .

    READ            reduce using rule 2 (declarations -> declaration declarations .)
    IDENTIFIER      reduce using rule 2 (declarations -> declaration declarations .)
    PRINTF          reduce using rule 2 (declarations -> declaration declarations .)


state 16

    (4) declaration -> INT identifier_list . SEMI

    SEMI            shift and go to state 23


state 17

    (5) identifier_list -> IDENTIFIER .
    (6) identifier_list -> IDENTIFIER . COMMA identifier_list

    SEMI            reduce using rule 5 (identifier_list -> IDENTIFIER .)
    COMMA           shift and go to state 24


state 18

    (10) statement -> IDENTIFIER ASSIGN . expression SEMI
    (12) expression -> . IDENTIFIER PLUS IDENTIFIER
    (13) expression -> . NUMBER
    (14) expression -> . IDENTIFIER

    IDENTIFIER      shift and go to state 25
    NUMBER          shift and go to state 27

    expression                     shift and go to state 26

state 19

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END . SEMI RBRACE

    SEMI            shift and go to state 28


state 20

    (8) statements -> statement statements .

    END             reduce using rule 8 (statements -> statement statements .)


state 21

    (9) statement -> READ IDENTIFIER . SEMI

    SEMI            shift and go to state 29


state 22

    (11) statement -> PRINTF LPAREN . STRING RPAREN

    STRING          shift and go to state 30


state 23

    (4) declaration -> INT identifier_list SEMI .

    INT             reduce using rule 4 (declaration -> INT identifier_list SEMI .)
    READ            reduce using rule 4 (declaration -> INT identifier_list SEMI .)
    IDENTIFIER      reduce using rule 4 (declaration -> INT identifier_list SEMI .)
    PRINTF          reduce using rule 4 (declaration -> INT identifier_list SEMI .)


state 24

    (6) identifier_list -> IDENTIFIER COMMA . identifier_list
    (5) identifier_list -> . IDENTIFIER
    (6) identifier_list -> . IDENTIFIER COMMA identifier_list

    IDENTIFIER      shift and go to state 17

    identifier_list                shift and go to state 31

state 25

    (12) expression -> IDENTIFIER . PLUS IDENTIFIER
    (14) expression -> IDENTIFIER .

    PLUS            shift and go to state 32
    SEMI            reduce using rule 14 (expression -> IDENTIFIER .)


state 26

    (10) statement -> IDENTIFIER ASSIGN expression . SEMI

    SEMI            shift and go to state 33


state 27

    (13) expression -> NUMBER .

    SEMI            reduce using rule 13 (expression -> NUMBER .)


state 28

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI . RBRACE

    RBRACE          shift and go to state 34


state 29

    (9) statement -> READ IDENTIFIER SEMI .

    READ            reduce using rule 9 (statement -> READ IDENTIFIER SEMI .)
    IDENTIFIER      reduce using rule 9 (statement -> READ IDENTIFIER SEMI .)
    PRINTF          reduce using rule 9 (statement -> READ IDENTIFIER SEMI .)
    END             reduce using rule 9 (statement -> READ IDENTIFIER SEMI .)


state 30

    (11) statement -> PRINTF LPAREN STRING . RPAREN

    RPAREN          shift and go to state 35


state 31

    (6) identifier_list -> IDENTIFIER COMMA identifier_list .

    SEMI            reduce using rule 6 (identifier_list -> IDENTIFIER COMMA identifier_list .)


state 32

    (12) expression -> IDENTIFIER PLUS . IDENTIFIER

    IDENTIFIER      shift and go to state 36


state 33

    (10) statement -> IDENTIFIER ASSIGN expression SEMI .

    READ            reduce using rule 10 (statement -> IDENTIFIER ASSIGN expression SEMI .)
    IDENTIFIER      reduce using rule 10 (statement -> IDENTIFIER ASSIGN expression SEMI .)
    PRINTF          reduce using rule 10 (statement -> IDENTIFIER ASSIGN expression SEMI .)
    END             reduce using rule 10 (statement -> IDENTIFIER ASSIGN expression SEMI .)


state 34

    (1) program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE .

    $end            reduce using rule 1 (program -> PROGRAMA IDENTIFIER LPAREN RPAREN LBRACE declarations statements END SEMI RBRACE .)


state 35

    (11) statement -> PRINTF LPAREN STRING RPAREN .

    READ            reduce using rule 11 (statement -> PRINTF LPAREN STRING RPAREN .)
    IDENTIFIER      reduce using rule 11 (statement -> PRINTF LPAREN STRING RPAREN .)
    PRINTF          reduce using rule 11 (statement -> PRINTF LPAREN STRING RPAREN .)
    END             reduce using rule 11 (statement -> PRINTF LPAREN STRING RPAREN .)


state 36

    (12) expression -> IDENTIFIER PLUS IDENTIFIER .

    SEMI            reduce using rule 12 (expression -> IDENTIFIER PLUS IDENTIFIER .)

